--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Parcel Tracking | ParcelForce</title>
+  <title>ParcelForce | Track. Deliver. Impress.</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-
   <style>
     :root {
       --red: #c8102e;
@@ -16,9 +15,13 @@
       --text: #333;
     }
 
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: var(--light);
       color: var(--text);
       transition: background 0.3s, color 0.3s;
@@ -29,224 +32,559 @@
       color: var(--white);
     }
 
-    .toggle-container {
-      text-align: right;
-      padding: 10px 30px;
+    body.dark-mode .hero-overlay {
+      background: rgba(0, 0, 0, 0.6);
     }
 
-    .banner {
-      background-color: var(--red);
+    body.dark-mode section {
+      background: var(--dark);
+    }
+
+    body.dark-mode .service-card,
+    body.dark-mode .contact-card,
+    body.dark-mode .create-account {
+      background: #2a2a2a;
       color: var(--white);
-      padding: 15px 30px;
+    }
+
+    body.dark-mode footer {
+      background: #1a1a1a;
+    }
+
+    header {
+      background: var(--red);
+      color: var(--white);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
+      padding: 15px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
-    .banner img {
+    .logo {
       height: 40px;
       border-radius: 8px;
     }
 
+    nav {
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
+    }
+
     nav a {
-      margin-left: 20px;
       color: var(--white);
       text-decoration: none;
       font-weight: 500;
+      padding: 5px 10px;
+      border-radius: 4px;
+      transition: background 0.2s;
     }
 
     nav a:hover {
-      text-decoration: underline;
+      background: rgba(255,255,255,0.2);
     }
 
-    .section {
-      max-width: 700px;
-      margin: 40px auto;
-      background: var(--white);
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    .toggle-container {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    #modeIcon {
+      font-size: 1.5em;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    #modeIcon:hover {
+      transform: scale(1.2);
+    }
+
+    .search-bar input {
+      padding: 8px 12px;
+      border-radius: 4px;
+      border: none;
+      outline: none;
+      min-width: 150px;
+    }
+
+    .hero {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+      color: white;
+    }
+
+    .bg-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
+
+    .hero-overlay {
+      position: relative;
+      z-index: 1;
+      padding: 100px 20px 40px;
+      background: rgba(0, 0, 0, 0.4);
       text-align: center;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
-    body.dark-mode .section {
-      background: #2c2c2c;
+    .hero-overlay h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     }
 
-    input {
-      padding: 10px;
-      width: 80%;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin-bottom: 15px;
-      font-size: 16px;
+    .hero-overlay p {
+      font-size: 1.3em;
+      margin-bottom: 30px;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
     }
 
-    button {
-      padding: 10px 20px;
-      background-color: var(--red);
-      color: var(--white);
+    .hero-overlay input {
+      padding: 14px;
+      width: 90%;
+      max-width: 450px;
       border: none;
       border-radius: 6px;
       font-size: 16px;
+      margin-bottom: 15px;
+      outline: none;
+      transition: box-shadow 0.3s;
+    }
+
+    .hero-overlay input:focus {
+      box-shadow: 0 0 0 3px rgba(255,255,255,0.5);
+    }
+
+    #trackBtn {
+      padding: 14px 32px;
+      background-color: white;
+      color: var(--red);
+      border: none;
+      border-radius: 6px;
+      font-size: 18px;
+      font-weight: bold;
       cursor: pointer;
+      animation: pulse 2s infinite;
+      transition: all 0.2s ease;
     }
 
-    button:hover {
-      background-color: #a50e24;
+    #trackBtn:hover {
+      background-color: #f0f0f0;
+      transform: scale(1.05);
     }
 
-    .contact-card {
-      background-color: var(--gray);
-      padding: 20px;
-      border-radius: 10px;
-      margin-top: 20px;
-      text-align: left;
+    #trackBtn:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+      animation: none;
     }
 
-    body.dark-mode .contact-card {
-      background-color: #2c2c2c;
-      color: var(--white);
-    }
-
-    .contact-card p {
-      margin: 10px 0;
-      font-size: 16px;
-    }
-
-    .footer {
-      background-color: var(--red);
-      color: var(--white);
-      padding: 40px 20px;
-      text-align: center;
-      margin-top: 60px;
-    }
-
-    .footer img {
-      width: 220px;
-      border-radius: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
-      margin-bottom: 20px;
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(200,16,46, 0.4); }
+      70% { box-shadow: 0 0 0 10px rgba(200,16,46, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(200,16,46, 0); }
     }
 
     .spinner {
-      display: inline-block;
-      width: 20px;
-      height: 20px;
-      border: 3px solid #fff;
-      border-top: 3px solid var(--red);
+      display: none;
+      margin-top: 15px;
+      border: 4px solid rgba(255,255,255,0.3);
+      border-top: 4px solid white;
       border-radius: 50%;
-      animation: spin 0.8s linear infinite;
-      margin-left: 10px;
-      vertical-align: middle;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
     }
 
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
 
-    @media (max-width: 600px) {
-      .banner {
+    section {
+      padding: 60px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    section h2 {
+      text-align: center;
+      font-size: 2.5em;
+      margin-bottom: 40px;
+      color: var(--red);
+    }
+
+    body.dark-mode section h2 {
+      color: #ff4d6d;
+    }
+
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      margin-top: 30px;
+    }
+
+    .service-card {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+      text-align: center;
+    }
+
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+    }
+
+    .service-card h3 {
+      font-size: 1.5em;
+      margin-bottom: 15px;
+      color: var(--red);
+    }
+
+    .service-card p {
+      margin-bottom: 20px;
+      line-height: 1.6;
+    }
+
+    .service-card button {
+      padding: 10px 24px;
+      background: var(--red);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .service-card button:hover {
+      background: #a00d26;
+    }
+
+    .create-account {
+      background: white;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      max-width: 500px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    .create-account h2 {
+      margin-bottom: 30px;
+    }
+
+    .create-account input {
+      display: block;
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 16px;
+      outline: none;
+      transition: border-color 0.3s;
+    }
+
+    .create-account input:focus {
+      border-color: var(--red);
+    }
+
+    .create-account button {
+      width: 100%;
+      padding: 14px;
+      background: var(--red);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .create-account button:hover {
+      background: #a00d26;
+    }
+
+    .contact-card {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    .contact-card p {
+      font-size: 1.2em;
+      margin: 15px 0;
+    }
+
+    .contact-card a {
+      color: var(--red);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .contact-card a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      background: #2a2a2a;
+      color: white;
+      text-align: center;
+      padding: 30px 20px;
+      margin-top: 60px;
+    }
+
+    footer img {
+      height: 50px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+    }
+
+    footer p {
+      margin: 10px 0;
+      opacity: 0.9;
+    }
+
+    @media (max-width: 768px) {
+      header {
         flex-direction: column;
-        align-items: flex-start;
+        gap: 15px;
       }
 
       nav {
-        margin-top: 10px;
+        justify-content: center;
       }
 
-      nav a {
-        display: inline-block;
-        margin: 5px 10px;
+      .hero-overlay h1 {
+        font-size: 2em;
+      }
+
+      .hero-overlay p {
+        font-size: 1em;
+      }
+
+      section h2 {
+        font-size: 2em;
       }
     }
   </style>
 </head>
 <body>
-  <div class="toggle-container">
-    <label>
-      <input type="checkbox" onchange="toggleDarkMode()" />
-      🌙 Dark Mode
-    </label>
-  </div>
-
-  <header class="banner">
-    <img src="logo.png" alt="ParcelForce Logo" />
+  <header>
+    <img src="logo.png" alt="ParcelForce Logo" class="logo" />
     <nav>
       <a href="#home">Home</a>
-      <a href="#about">About Us</a>
+      <a href="#about">About</a>
       <a href="#services">Services</a>
-      <a href="#contact">Contact Us</a>
+      <a href="#contact">Contact</a>
       <a href="auth.html">Login</a>
       <a href="auth.html">Sign Up</a>
     </nav>
+    <div class="toggle-container">
+      <span id="modeIcon" onclick="toggleDarkMode()">🌙</span>
+      <div class="search-bar">
+        <input type="text" placeholder="Search..." />
+      </div>
+    </div>
   </header>
 
-  <div class="section" id="home">
-    <h2>Track your parcel</h2>
-    <p>Keep tabs on your parcel, enter your tracking number or chat with us if you have any questions.</p>
-    
-    <input type="text" id="trackingInput" placeholder="Enter tracking number" />
-    <br><br>
-    <button onclick="trackItem()">Track Item</button>
-    <div id="spinner" style="display:none;" class="spinner"></div>
-  </div>
+  <section class="hero" id="home">
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="courier-bg.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <div class="hero-overlay">
+      <h1>Track Your Parcel</h1>
+      <p>Real-time updates. Global reach. Premium service.</p>
+      <input type="text" id="trackingInput" placeholder="Enter tracking number" />
+      <button id="trackBtn" onclick="trackItem()">Track Now</button>
+      <div id="spinner" class="spinner"></div>
+    </div>
+  </section>
 
-  <div class="section" id="about">
-    <h2>About Us</h2>
-    <p>ParcelForce International Courier is committed to fast, secure, and reliable delivery across borders. We empower clients with real-time tracking, branded invoices, and responsive support.</p>
-  </div>
+  <section id="services">
+    <h2>What would you like to do?</h2>
+    <div class="services-grid">
+      <div class="service-card">
+        <h3>📦 Send an Item</h3>
+        <p>Book a pickup or drop off your parcel.</p>
+        <button>Send Now</button>
+      </div>
+      <div class="service-card">
+        <h3>🔍 Track Your Item</h3>
+        <p>Check delivery status in real time.</p>
+        <button onclick="document.getElementById('trackingInput').scrollIntoView({behavior: 'smooth'})">Track</button>
+      </div>
+      <div class="service-card">
+        <h3>📬 Redelivery</h3>
+        <p>Missed a delivery? Book a redelivery.</p>
+        <button>Reschedule</button>
+      </div>
+      <div class="service-card">
+        <h3>🌍 International Shipping</h3>
+        <p>Send parcels worldwide with premium support.</p>
+        <button>Explore</button>
+      </div>
+      <div class="service-card">
+        <h3>📮 Find a Postcode</h3>
+        <p>Search for UK addresses and postcodes.</p>
+        <button>Search</button>
+      </div>
+    </div>
+  </section>
 
-  <div class="section" id="services">
-    <h2>Services</h2>
-    <p>We offer parcel tracking, QR code integration, branded invoices, client dashboards, and secure authentication — all tailored to your workflow.</p>
-  </div>
+  <section class="create-account">
+    <h2>Create an Account</h2>
+    <input type="text" id="username" placeholder="Username" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button id="createAccountBtn">Create Account</button>
+  </section>
 
-  <div class="section" id="contact">
+  <section id="contact">
     <h2>Contact Us</h2>
     <div class="contact-card">
       <p>📧 Email: <a href="mailto:Parcel_Force1986@outlook.com">Parcel_Force1986@outlook.com</a></p>
       <p>💬 WhatsApp: <a href="https://wa.me/27633373857" target="_blank">+27 63 337 3857</a></p>
     </div>
-  </div>
+  </section>
 
-  <div class="footer">
+  <footer>
     <img src="logo.png" alt="ParcelForce Logo" />
-    <hr style="margin: 30px auto; width: 80%; border-color: #fff;" />
-    <p style="color: #ffffff; font-size: 0.95em;">
-  <strong>ParcelForce International Courier</strong> &copy; 2025. All rights reserved.
-</p>
-  </div>
+    <p><strong>ParcelForce International Courier</strong> &copy; 2025. All rights reserved.</p>
+    <p>Privacy | Terms | Accessibility</p>
+  </footer>
 
-  <script>
-    function trackItem() {
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-auth.js";
+    import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/10.5.2/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBqymK8EWPa9s7c_2uTUXzBONK3XfTipFU",
+      authDomain: "parcelforcetracker.firebaseapp.com",
+      databaseURL: "https://parcelforcetracker-default-rtdb.firebaseio.com",
+      projectId: "parcelforcetracker",
+      storageBucket: "parcelforcetracker.appspot.com",
+      messagingSenderId: "408904759435",
+      appId: "1:408904759435:web:eba15d67580426198bbc8e"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getDatabase(app);
+
+    // Track Item Function
+    window.trackItem = async function () {
       const input = document.getElementById('trackingInput');
-      const value = input.value.trim();
-      const pattern = /^[A-Z0-9]{9,21}$/i;
-      const button = document.querySelector('button');
+      const value = input.value.trim().toUpperCase();
+      const pattern = /^[A-Z0-9]{9,21}$/;
       const spinner = document.getElementById('spinner');
+      const button = document.getElementById('trackBtn');
 
-      if (value && pattern.test(value)) {
-        input.style.borderColor = "#ccc";
-        button.innerText = "Tracking...";
-        spinner.style.display = "inline-block";
-        setTimeout(() => {
-          window.location.href = `track.html?ref=${encodeURIComponent(value)}`;
-        }, 500);
-      } else {
+      if (!value || !pattern.test(value)) {
         input.style.borderColor = "red";
-        input.focus();
-        alert("Please enter a valid tracking number.");
+        alert("Please enter a valid tracking number (9-21 characters).");
+        return;
       }
-    }
 
-    function toggleDarkMode() {
+      input.style.borderColor = "#ccc";
+      spinner.style.display = "inline-block";
+      button.disabled = true;
+      button.textContent = "Checking...";
+
+      try {
+        const snapshot = await get(child(ref(db), `invoices/${value}`));
+        if (snapshot.exists()) {
+          window.location.href = `track.html?ref=${encodeURIComponent(value)}`;
+        } else {
+          alert("Tracking number not found. Please check and try again.");
+        }
+      } catch (error) {
+        console.error("Firebase error:", error);
+        alert("Error checking tracking number. Try again later.");
+      } finally {
+        spinner.style.display = "none";
+        button.disabled = false;
+        button.textContent = "Track Now";
+      }
+    };
+
+    // Create Account Function
+    const createBtn = document.getElementById('createAccountBtn');
+    createBtn.addEventListener('click', async () => {
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
+      const username = document.getElementById('username').value.trim();
+
+      if (!username || !email || !password) {
+        alert("Please fill in all fields.");
+        return;
+      }
+
+      if (password.length < 6) {
+        alert("Password must be at least 6 characters.");
+        return;
+      }
+
+      try {
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        alert("Account created successfully! Welcome, " + username + "!");
+        // Clear form
+        document.getElementById('username').value = '';
+        document.getElementById('email').value = '';
+        document.getElementById('password').value = '';
+      } catch (error) {
+        console.error("Error creating account:", error);
+        alert("Error: " + error.message);
+      }
+    });
+
+    // Dark Mode Toggle
+    window.toggleDarkMode = function() {
       document.body.classList.toggle('dark-mode');
+      const icon = document.getElementById('modeIcon');
+      icon.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
+      // Save preference
+      localStorage.setItem('darkMode', document.body.classList.contains('dark-mode'));
+    };
+
+    // Load dark mode preference
+    if (localStorage.getItem('darkMode') === 'true') {
+      document.body.classList.add('dark-mode');
+      document.getElementById('modeIcon').textContent = '☀️';
     }
 
-    document.getElementById('trackingInput').addEventListener('input', () => {
-      document.getElementById('trackingInput').style.borderColor = "#ccc";
+    // Enter key support for tracking
+    document.getElementById('trackingInput').addEventListener('keypress', (e) => {
+      if (e.key === 'Enter') {
+        trackItem();
+      }
     });
   </script>
 </body>
